# agent-kit-web

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: agents.py  catalog.py  config.py  main.py  sessions.py  stream.py  wakeup_daemon.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/skills/: page.tsx
frontend/components/: CatalogView.tsx  CommandPalette.tsx  NavBar.tsx  StreamedMarkdown.tsx
frontend/lib/: groupSessions.ts
